src/objects/APXT_CMQM__QuickMerge_Link__c.object
<CustomObject>
    <description>This optional component is used to store a collection of parameters used to launch either Conga Merge&apos;s MassMerge or PointMerge tools.</description>
    <fields>
        <fullName>APXT_CMQM__Activity_Subject__c</fullName>
        <inlineHelpText>Enter a subject for the Task</inlineHelpText>
        <label>Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Automatic_Logging__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>With this enabled, Conga Merge will automatically log an activity (based on the Log Activity Options) when you click to download Letters/Documents.</inlineHelpText>
        <label>Automatic Logging</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Bypass_Wizard__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable this field to bypass the Mass Merge wizard and proceed directly to the Download page</inlineHelpText>
        <label>Bypass Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Campaign_Id__c</fullName>
        <inlineHelpText>Paste a 15-character Campaign Id here to use its members as the data source</inlineHelpText>
        <label>Campaign Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Default_to_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this field to set the default output type to PDF</inlineHelpText>
        <label>Default to PDF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Document_Template_Id__c</fullName>
        <description>Use the Template Id to identify the 15-character id of the document template</description>
        <inlineHelpText>Enter a 15-character id of the record containing the document template.</inlineHelpText>
        <label>Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Envelope_Template_Id__c</fullName>
        <inlineHelpText>Enter a 15-character ID of the record containing the envelope template.</inlineHelpText>
        <label>Envelope Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Follow_up_Interval__c</fullName>
        <inlineHelpText>Enter a value to indicate the number of days in the future to schedule a follow-up task</inlineHelpText>
        <label>Follow-up Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Force_Output_as_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this field to force the output type to PDF</inlineHelpText>
        <label>Force Output as PDF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Label_Template_Id__c</fullName>
        <inlineHelpText>Enter a 15-character ID of the record containing the label template.</inlineHelpText>
        <label>Label Template Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Launch__c</fullName>
        <formula>IF(  ISPICKVAL( APXT_CMQM__Link_Type__c , &quot;PointMerge&quot;) , 

Hyperlink( &quot;https://www.appextremes.com/apps/Conga/PointMerge.aspx&quot;
&amp; &quot;?sessionId=&quot; &amp; $Api.Session_ID
&amp; &quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80
&amp; &quot;&amp;id=&quot; &amp; Id
&amp; &quot;&amp;ReportId=&quot; &amp; SUBSTITUTE( APXT_CMQM__Report_Id__c , &quot;User.Id&quot;, $User.Id )
&amp; &quot;&amp;TemplateId=&quot; &amp; APXT_CMQM__Document_Template_Id__c
&amp; APXT_CMQM__Other_Parameters__c
, IMAGE( &quot;https://www.appextremes.com/apps/Conga/Images/Launch.png&quot;, &quot;Launch PointMerge&quot;) ) ,

Hyperlink( &quot;https://www.appextremes.com/apps/Conga/Welcome.aspx&quot;
&amp; &quot;?sessionId=&quot; &amp; $Api.Session_ID
&amp; &quot;&amp;serverUrl=&quot; &amp; $Api.Partner_Server_URL_80
&amp; &quot;&amp;ReportId=&quot; &amp;  SUBSTITUTE( APXT_CMQM__Report_Id__c , &quot;User.Id&quot;, $User.Id )
&amp; &quot;&amp;CampaignId=&quot; &amp;  APXT_CMQM__Campaign_Id__c 
&amp; &quot;&amp;QueryId=&quot; &amp;  SUBSTITUTE( APXT_CMQM__Query_Id__c , &quot;User.Id&quot;,  $User.Id )
&amp; &quot;&amp;QueryId1=&quot; &amp;   SUBSTITUTE( APXT_CMQM__Query_Id_1__c , &quot;User.Id&quot;,  $User.Id )
&amp; &quot;&amp;DocTemplateId=&quot; &amp;  APXT_CMQM__Document_Template_Id__c 
&amp; &quot;&amp;LabelTemplateId=&quot; &amp;  APXT_CMQM__Label_Template_Id__c 
&amp; &quot;&amp;EnvTemplateId=&quot; &amp;  APXT_CMQM__Envelope_Template_Id__c 
&amp; &quot;&amp;bpw=&quot; &amp;    IF( APXT_CMQM__Bypass_Wizard__c = true, &quot;1&quot;, &quot;&quot;)
&amp; &quot;&amp;DefaultPDF=&quot; &amp;  IF( APXT_CMQM__Default_to_PDF__c  = true, &quot;1&quot;, &quot;&quot;)
&amp; &quot;&amp;fp0=&quot; &amp;  IF( APXT_CMQM__Force_Output_as_PDF__c = true, &quot;1&quot;, &quot;&quot;)
&amp; &quot;&amp;lg0=&quot; &amp;  IF( APXT_CMQM__LogWordBody__c  = true, &quot;1&quot;, &quot;&quot;)
&amp; &quot;&amp;lg1=&quot; &amp;  APXT_CMQM__Activity_Subject__c 
&amp; &quot;&amp;lg2=&quot; &amp; TEXT( APXT_CMQM__Follow_up_Interval__c  )
&amp; &quot;&amp;lg4=&quot; &amp;  IF( APXT_CMQM__Automatic_Logging__c  = true, &quot;1&quot;, &quot;&quot;)
, IMAGE( &quot;https://www.appextremes.com/apps/Conga/Images/Launch.png&quot;, &quot;Launch Conga Merge&quot;) ) )</formula>
        <label>Launch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Link_Type__c</fullName>
        <label>Link Type</label>
        <picklist>
            <picklistValues>
                <fullName>Mass Merge</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PointMerge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__LogWordBody__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this field to store the merged body of the document in the Task record</inlineHelpText>
        <label>Store Body Text?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Other_Parameters__c</fullName>
        <inlineHelpText>Enter other PointMerge parameters, using static values. You MAY NOT use Salesforce fields such as &quot;{!Account.Name}&quot;. Use ampersands (&amp;) between parameters.
For example:
&amp;DefaultPDF=1&amp;DS4=1</inlineHelpText>
        <label>Other Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Query_Id_1__c</fullName>
        <inlineHelpText>Enter the Query Record ID (plus optional parameters). In a Mass Merge operation, this Query would represent the Detail data.</inlineHelpText>
        <label>Query Id 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Query_Id__c</fullName>
        <inlineHelpText>Enter the Query Record ID (plus optional parameters). In a Mass Merge operation, this Query would represent the Master data.</inlineHelpText>
        <label>Query Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Report_Id__c</fullName>
        <description>This field contains a list of Salesforce Report Ids, separated by commas.</description>
        <inlineHelpText>Enter 15-character report ids separated by commas. You may use &quot;User.Id&quot; (no quotes) as a value to pass.</inlineHelpText>
        <label>Report Id(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CMQM__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QuickMerge Link</label>
    <listViews>
        <fullName>APXT_CMQM__All</fullName>
        <columns>APXT_CMQM__Launch__c</columns>
        <columns>APXT_CMQM__Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMQM-{0000}</displayFormat>
        <label>QuickMerge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QuickMerge Links</pluralLabel>
    <recordTypes>
        <fullName>APXT_CMQM__MassMerge</fullName>
        <active>true</active>
        <description>A MassMerge Link is used to produce a multiple documents, labels and/or envelopes</description>
        <label>MassMerge</label>
    </recordTypes>
    <recordTypes>
        <fullName>APXT_CMQM__PointMerge</fullName>
        <active>true</active>
        <description>A PointMerge Link is used to produce a single document, possibly using multiple sets of data</description>
        <label>PointMerge</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APXT_CMQM__CampaignId_Length_15</fullName>
        <active>true</active>
        <description>If an ID field contains anything, it must be a Salesforce ID which must be exactly 15 characters.</description>
        <errorConditionFormula>AND( APXT_CMQM__Campaign_Id__c &lt;&gt; &quot;&quot;, 
 LEN(APXT_CMQM__Campaign_Id__c )&lt;&gt;15 )</errorConditionFormula>
        <errorDisplayField>APXT_CMQM__Campaign_Id__c</errorDisplayField>
        <errorMessage>If you enter a Campaign Id, you must enter the 15-character Salesforce Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_CMQM__DocumentTemplateId_Length_15</fullName>
        <active>true</active>
        <description>If an ID field contains anything, it must be a Salesforce ID which must be exactly 15 characters.</description>
        <errorConditionFormula>AND( APXT_CMQM__Document_Template_Id__c &lt;&gt; &quot;&quot;, 
 LEN( APXT_CMQM__Document_Template_Id__c )&lt;&gt;15 )</errorConditionFormula>
        <errorDisplayField>APXT_CMQM__Document_Template_Id__c</errorDisplayField>
        <errorMessage>If you enter an Id, you must enter the 15-character Salesforce Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_CMQM__EnvTemplateId_Length_15</fullName>
        <active>true</active>
        <description>If an ID field contains anything, it must be a Salesforce ID which must be exactly 15 characters.</description>
        <errorConditionFormula>AND(   APXT_CMQM__Envelope_Template_Id__c &lt;&gt; &quot;&quot;, 
 LEN(  APXT_CMQM__Envelope_Template_Id__c  )&lt;&gt;15 )</errorConditionFormula>
        <errorDisplayField>APXT_CMQM__Envelope_Template_Id__c</errorDisplayField>
        <errorMessage>If you enter an Id, you must enter the 15-character Salesforce Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_CMQM__LabelTemplateId_Length_15</fullName>
        <active>true</active>
        <description>If an ID field contains anything, it must be a Salesforce ID which must be exactly 15 characters.</description>
        <errorConditionFormula>AND(  APXT_CMQM__Label_Template_Id__c &lt;&gt; &quot;&quot;, 
 LEN( APXT_CMQM__Label_Template_Id__c )&lt;&gt;15 )</errorConditionFormula>
        <errorDisplayField>APXT_CMQM__Label_Template_Id__c</errorDisplayField>
        <errorMessage>If you enter an Id, you must enter the 15-character Salesforce Id.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APXT_CMQM__Must_begin_with_Ampersand</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( LEFT( APXT_CMQM__Other_Parameters__c , 1 )  &lt;&gt; &quot;&amp;&quot; ,
                 APXT_CMQM__Other_Parameters__c &lt;&gt; &quot;&quot; )</errorConditionFormula>
        <errorDisplayField>APXT_CMQM__Other_Parameters__c</errorDisplayField>
        <errorMessage>This field must begin with an ampersand (&amp;).</errorMessage>
    </validationRules>
</CustomObject>